// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers::Header should render correctly 1`] = `
<div
  className="header"
>
  <h3
    className="title"
  >
    <a
      onClick={[Function]}
      style={Object {}}
      target="_blank"
    >
      <i
        className="fa fa-home"
      />
      <span>
        Your awesome title
      </span>
    </a>
  </h3>
  <span
    className="version"
  >
    0.1.0
  </span>
</div>
`;

exports[`Containers::Header should render placeholder title 1`] = `
<div
  className="header"
>
  <h3
    className="title"
  >
    <a
      onClick={[Function]}
      style={Object {}}
      target="_blank"
    >
      <i
        className="fa fa-home"
      />
      <span>
        You have no title!
      </span>
    </a>
  </h3>
  <span
    className="version"
  >
    0.1.0
  </span>
</div>
`;
